; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_pcap-snf.c_snf_pcap_stats.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_pcap-snf.c_snf_pcap_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, %struct.pcap_snf* }
%struct.pcap_snf = type { i32 }
%struct.pcap_stat = type { i64, i64, i64 }
%struct.snf_ring_stats = type { i64, i64, i64, i64 }

@PCAP_ERRBUF_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"snf_get_stats\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, %struct.pcap_stat*)* @snf_pcap_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snf_pcap_stats(%struct.TYPE_3__* %0, %struct.pcap_stat* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca %struct.pcap_stat*, align 8
  %6 = alloca %struct.snf_ring_stats, align 8
  %7 = alloca %struct.pcap_snf*, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store %struct.pcap_stat* %1, %struct.pcap_stat** %5, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 1
  %11 = load %struct.pcap_snf*, %struct.pcap_snf** %10, align 8
  store %struct.pcap_snf* %11, %struct.pcap_snf** %7, align 8
  %12 = load %struct.pcap_snf*, %struct.pcap_snf** %7, align 8
  %13 = getelementptr inbounds %struct.pcap_snf, %struct.pcap_snf* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @snf_ring_getstats(i32 %14, %struct.snf_ring_stats* %6)
  store i32 %15, i32* %8, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %24

17:                                               ; preds = %2
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = load i32, i32* @PCAP_ERRBUF_SIZE, align 4
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @pcap_fmt_errmsg_for_errno(i32 %20, i32 %21, i32 %22, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %3, align 4
  br label %43

24:                                               ; preds = %2
  %25 = getelementptr inbounds %struct.snf_ring_stats, %struct.snf_ring_stats* %6, i32 0, i32 3
  %26 = load i64, i64* %25, align 8
  %27 = getelementptr inbounds %struct.snf_ring_stats, %struct.snf_ring_stats* %6, i32 0, i32 2
  %28 = load i64, i64* %27, align 8
  %29 = add nsw i64 %26, %28
  %30 = load %struct.pcap_stat*, %struct.pcap_stat** %5, align 8
  %31 = getelementptr inbounds %struct.pcap_stat, %struct.pcap_stat* %30, i32 0, i32 2
  store i64 %29, i64* %31, align 8
  %32 = getelementptr inbounds %struct.snf_ring_stats, %struct.snf_ring_stats* %6, i32 0, i32 2
  %33 = load i64, i64* %32, align 8
  %34 = load %struct.pcap_stat*, %struct.pcap_stat** %5, align 8
  %35 = getelementptr inbounds %struct.pcap_stat, %struct.pcap_stat* %34, i32 0, i32 1
  store i64 %33, i64* %35, align 8
  %36 = getelementptr inbounds %struct.snf_ring_stats, %struct.snf_ring_stats* %6, i32 0, i32 1
  %37 = load i64, i64* %36, align 8
  %38 = getelementptr inbounds %struct.snf_ring_stats, %struct.snf_ring_stats* %6, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = add nsw i64 %37, %39
  %41 = load %struct.pcap_stat*, %struct.pcap_stat** %5, align 8
  %42 = getelementptr inbounds %struct.pcap_stat, %struct.pcap_stat* %41, i32 0, i32 0
  store i64 %40, i64* %42, align 8
  store i32 0, i32* %3, align 4
  br label %43

43:                                               ; preds = %24, %17
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

declare dso_local i32 @snf_ring_getstats(i32, %struct.snf_ring_stats*) #1

declare dso_local i32 @pcap_fmt_errmsg_for_errno(i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
